# RTC_tauri_and_rust_beta

./: LICENSE  README.md
app/: .gitignore  Cargo.toml  app_logo.psd  app_logo_about.psd  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.tsx  Settings.tsx  SplashScreen.tsx  main.tsx  splash.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/src-tauri/src/app_modules/: mod.rs
app/src-tauri/src/app_modules/global_json/: mod.rs
app/src-tauri/src/app_modules/time_calculation/: mod.rs
app/src/components/AppBorders/: index.tsx  styles.ts
app/src/components/CircularProgressBar/: index.tsx  styles.tsx
app/src/components/Header/: index.tsx  styles.ts
app/src/components/IconRoundedButton/: index.tsx  styles.ts
app/src/components/InputText/: index.tsx  styled.ts
app/src/components/LeftMenuBar/: index.tsx  styles.ts
app/src/components/Pagination/: index.tsx  styles.ts
app/src/components/Pagination/pages/About/: index.tsx  styles.ts
app/src/components/Pagination/pages/Home/: index.tsx  styles.ts
app/src/components/Pagination/pages/Settings/: index.tsx  styles.ts
app/src/components/SvgIcon/: index.tsx
app/src/pages/: splashscreen.html
app/src/styles/: global.ts  styled.d.ts
app/src/styles/themes/: dark.ts  light.ts
app/src/utils/: userPersistedState.ts
